Edit via tool calling